--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div class="recent-posts">
 	<div class="container">
 		<div class="col-md-6 recent-left">
-			<h3>Что мы предлагаем</h3>
+			<h3>Ваша мечта ближе чем кажется</h3>
 			<p>Мечтаете учиться за границей, но думаете, что это это дорого и невозможно? Мы на собственном примере доказали, что поступить в ведущий европейский вуз и получить грант - это реально.</p>
 			<p>Мы хотим поделиться с вами нашими знаниями и опытом и помочь осуществить мечту.</p>
 		</div>
