--- a/prices.html
+++ b/prices.html
@@ -74,11 +74,130 @@
 			</div>
 			<div class="about-wedo">
 				<div class="col-md-4 about-top-img">
-					<a href="#"><img src="images/book.jpg" alt="" class="img-responsive"></a>
+					<img src="img/consult.jpg" alt="" class="img-responsive">
 				</div>
 				<div class="col-md-8 about-wedo-right">
-					<h4><a href="#">Консультация</a></h4>
+					<h4>Консультация</h4>
+					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления. Во время консультации вы можете получить ответы на такие вопросы, как:</p>
+					<ul>
+						<li>критерии приема и стратегии, которые повысят ваши шансы на поступление</li>
+						<li>как написать мотивационное письмо</li>
+						<li>как должно выглядеть рекомендательное письмо, академическое резюме</li>
+						<li>что такое онлайн заявка и как составить ее правильно</li>
+						<li>что такое транскрипты и где их взять</li>
+						<li>какие экзамены нужно сдать, как к ним готовиться</li>
+						<li>руководство к получению финансовой помощи (стипендии, гранты, assistantships, fellowships)</li>
+						<li>как сравнить полученные предложения о поступлении</li>
+					</ul>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/strategy.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Составление индивидуальной стратегии поступления</h4>
+					<p>Разработка индивидуальной стратегии поступления с учётом вашей ситуации, желаемого учебного заведения и сроков поступления. Мы составим четкие рекомендации, как действовать дальше, чтобы максимально увеличить ваши шансы на поступление.</p>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/harvard.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Подбор университетов</h4>
 					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/money.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Подбор грантов и стипендий</h4>
+					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/write1.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Написание мотивационного или рекомендательного письма</h4>
+					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/edit1.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Проверка и редактура мотивационного или рекомендательного письма</h4>
+					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/edit1.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Составление академического CV</h4>
+					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/edit1.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Составление полного пакета документов</h4>
+					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/edit1.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Проверка пакета документов</h4>
+					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
+					<h4>Цена: 10€</h4>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<br>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/relax.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<h4>Полный цикл поступления</h4>
+					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
+					<h4>Цена: 10€</h4>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
