--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 <div class="banner">
 	<div class="container">
 		<div class="banner-main">
-			<h2>Study abroad</h2>
-			<p>We make the dream come true</p>
+			<h2>We make the dream come true</h2>
 		</div>
 	</div>
 </div>
