--- a/prices.html
+++ b/prices.html
@@ -42,8 +42,8 @@
 			   		<span class="menu"> <img src="images/icon.png" alt=""/></span>
 					<ul class="res">
 						<li><a href="index.html"><span data-hover="Главная">Главная</span></a></li>
-						<li><a class="active" href="prices.html"><span data-hover='Наши услуги'>Наши услуги</span></a></li>
-						<li><a href="references.html">Отзывы</a></li>
+						<li><a class="active" href="prices.html">Наши услуги</a></li>
+						<li><a href="references.html"><span data-hover='Отзывы'>Отзывы</span></a></li>
 						<li><a href="contact.html"><span data-hover="Оставить заявку">Оставить заявку</span></a></li>
 					<div class="clearfix"> </div>
 					</ul>
@@ -100,8 +100,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Составление индивидуальной стратегии поступления</h4>
-					<p>Разработка индивидуальной стратегии поступления с учётом вашей ситуации, желаемого учебного заведения и сроков поступления. Мы составим четкие рекомендации, как действовать дальше, чтобы максимально увеличить ваши шансы на поступление.</p>
-					<h4>Цена: 10€</h4>
+					<p>Разработка индивидуальной стратегии поступления с учётом вашей персональной ситуации, возможностей, опыта и сроков поступления. Мы подскажем, какие страны и ВУЗы лучше выбрать и какова вероятность получить финансирование. Мы составим четкие рекомендации, как действовать дальше, чтобы максимально увеличить ваши шансы на поступление.</p>
+					<h4>Цена: 30€</h4>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
