grants.html added

--- a/grants/visby-programme-2016.html
+++ b/grants/visby-programme-2016.html
@@ -93,7 +93,7 @@
 <!--footer star here-->
 <div class="footer">
 	<div class="foter-bottom">
-		<p class="footer-copyrts">Inspired by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+		<p class="footer-copyrts">Designed by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
 	</div>
 </div>
 <!--footer end here-->
