--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
 					<span class="menu"> <img src="images/icon.png" alt=""/></span>
 					<ul class="res">
 						<li><a href="index.html"><span data-hover="Главная">Главная</span></a></li>
+						<li><a href="grants.html"><span data-hover="База грантов">База грантов</span></a></li>
 						<li><a href="prices.html"><span data-hover='Наши услуги'>Наши услуги</span></a></li>
 						<li><a href="references.html"><span data-hover="Отзывы">Отзывы</span></a></li>
 						<li><a class="active"href="contact.html">Оставить заявку</a></li>
@@ -93,7 +94,7 @@
 <!--footer star here-->
 <div class="footer">
 	<div class="foter-bottom">
-		<p class="footer-copyrts">Designed by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+		<p class="footer-copyrts">Inspired by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
 	</div>
 </div>
 <!--footer end here-->
