--- a/grants.html
+++ b/grants.html
@@ -48,10 +48,10 @@
 			   <div class="top-nav">
 			   		<span class="menu"> <img src="images/icon.png" alt=""/></span>
 					<ul class="res">
-						<li><a href="index.html"><span data-hover="Главная">Главная</span></a></li>
-						<li><a href="grants.html"><span data-hover="База грантов">База грантов</span></a></li>
+						<li><a href="index.html">Главная</a></li>
+						<li><a class="active" href="grants.html"><span data-hover="База грантов">База грантов</span></a></li>
 						<li><a href="prices.html"><span data-hover='Наши услуги'>Наши услуги</span></a></li>
-						<li><a class="active" href="references.html">Отзывы</a></li>
+						<li><a href="references.html"><span data-hover="Отзывы">Отзывы</span></a></li>
 						<li><a href="contact.html"><span data-hover="Оставить заявку">Оставить заявку</span></a></li>
 					<div class="clearfix"> </div>
 					</ul>
@@ -74,12 +74,21 @@
 </div>
 <div class="about">
 	<div class="container">
-		<div class="about-main">
-			<div class="about-top">
-				<h3>Что говорят другие</h3>
-				<p>Здесь скоро появится плагин с комментариями из контакта</p>
+		<div class="about-top">
+				<h3>Стипендии и гранты</h3>
+				<p>Мы собрали информацию о грантах для обучения на программах разного уровня, предоставляющих полное и частичное покрытие. Мы приложим максимум усилий, чтобы эта база пополняялась как можно чаще.</p>
 			</div>
-		</div>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="img/consult.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<a href ="grants/visby-programme-2016.html"><h4>Visby Programme Scholarships for master’s level studies</h4></a>
+					<p>Стипендия для обучения в Швеции по программам магистра для граждан России, Украины, Беларуси, Молдовы и Грузии. Стипендия с полным покрытием (покрывается вся стоимость обучения и остальные расходы). Предоставляется travel grant и страховка.</p>
+					<p>Период для подач заявок: 1-13 февраля.</p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
 	</div>
 </div>
 <link rel="stylesheet" href="css/swipebox.css">
