--- a/prices.html
+++ b/prices.html
@@ -42,6 +42,7 @@
 			   		<span class="menu"> <img src="images/icon.png" alt=""/></span>
 					<ul class="res">
 						<li><a href="index.html"><span data-hover="Главная">Главная</span></a></li>
+						<li><a href="grants.html"><span data-hover="База грантов">База грантов</span></a></li>
 						<li><a class="active" href="prices.html">Наши услуги</a></li>
 						<li><a href="references.html"><span data-hover='Отзывы'>Отзывы</span></a></li>
 						<li><a href="contact.html"><span data-hover="Оставить заявку">Оставить заявку</span></a></li>
@@ -80,16 +81,19 @@
 					<h4>Консультация</h4>
 					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления. Во время консультации вы можете получить ответы на такие вопросы, как:</p>
 					<ul>
-						<li>критерии приема и стратегии, которые повысят ваши шансы на поступление</li>
-						<li>как написать мотивационное письмо</li>
-						<li>как должно выглядеть рекомендательное письмо, академическое резюме</li>
-						<li>что такое онлайн заявка и как составить ее правильно</li>
-						<li>что такое транскрипты и где их взять</li>
-						<li>какие экзамены нужно сдать, как к ним готовиться</li>
-						<li>руководство к получению финансовой помощи (стипендии, гранты, assistantships, fellowships)</li>
-						<li>как сравнить полученные предложения о поступлении</li>
+						<li>критерии отбора в университеты и на стипендии;</li>
+						<li>стратегии, которые увеличат ваши шансы на поступление;</li>
+						<li>в каких странах возможно бесплатное образование;</li>
+						<li>как правильно выбрать ВУЗ;</li>
+						<li>как писать мотивационное и рекомендательное письмо;</li>
+						<li>как составить академическое CV;</li>
+						<li>как происходит подача документов в вузы;</li>
+						<li>что такое транскриптсы и где их взять;</li>
+						<li>какие экзамены нужно сдать;</li>
+						<li>стоимость проживания в странах Европы;</li>
+						<li>как получить финансовую поддержку (стипендии, гранты, assistantships, fellowships).</li>
 					</ul>
-					<h4>Цена: 10€</h4>
+					<h5>Стоимость: 10€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -101,7 +105,7 @@
 				<div class="col-md-8 about-wedo-right">
 					<h4>Составление индивидуальной стратегии поступления</h4>
 					<p>Разработка индивидуальной стратегии поступления с учётом вашей персональной ситуации, возможностей, опыта и сроков поступления. Мы подскажем, какие страны и ВУЗы лучше выбрать и какова вероятность получить финансирование. Мы составим четкие рекомендации, как действовать дальше, чтобы максимально увеличить ваши шансы на поступление.</p>
-					<h4>Цена: 30€</h4>
+					<h5>Стоимость: 30€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -112,8 +116,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Подбор университетов</h4>
-					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
-					<h4>Цена: 10€</h4>
+					<p>На основании заполненной анкеты и общения с вами мы подготовим список из 10 университетов, которые подходят именно вам. Для выбора университетов будет использована информация о ваших научных и творческих интересах, целях обучения, пожеланиях о стране и городе обучения, а также о ваших текущих возможностях. Вам будет доступна полная информация о программе обучения, принимающем университете и городе, требуемых документах, сроках подачи и ответа, а также другие важные параметры, на основе которых вы сможете сделать свой выбор.</p>
+					<h5>Стоимость: 10€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -124,8 +128,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Подбор грантов и стипендий</h4>
-					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
-					<h4>Цена: 10€</h4>
+					<p>Мы подберем для вас варианты полного или частичного покрытия стоимости обучения, а также проживания в выбранной вами стране. Возможно, вам не придётся тратить тысячи евро на учебу, а удастся получить грант. Вам будет предоставлена полная информация об условиях стипендии, предоставляемом финансовом покрытии, требуемых для заявки документах, сроках подачи и ответа и других важных подробностях.</p>
+					<h5>Стоимость: 10€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -136,8 +140,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Написание мотивационного или рекомендательного письма</h4>
-					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
-					<h4>Цена: 10€</h4>
+					<p>Мы напишем за вас мотивационное письмо, руководствуясь вопросами анкеты и фактах из вашей биографии. Письмо будет написано с учётом требований конкретной программы, её целей и желаемых кандидатов.</p>
+					<h5>Стоимость: 10€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -148,8 +152,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Проверка и редактура мотивационного или рекомендательного письма</h4>
-					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
-					<h4>Цена: 10€</h4>
+					<p>Мотивационное или рекомендательное письмо является одним из важнейших документов, который может сыграть определяющую роль при выборе кандидатов. Мы можем помочь вам сделать из вашего письма то, что максимально ***</p>
+					<h5>Стоимость: 10€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -160,8 +164,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Составление академического CV</h4>
-					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
-					<h4>Цена: 10€</h4>
+					<p>Академическое CV зачастую отличается от CV, которые требуются при приёме на работу. Мы составим документ, который заставит потенциальную приёмную комиссию обратить на вас внимание. ***</p>
+					<h5>Стоимость: 10€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -172,8 +176,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Составление полного пакета документов</h4>
-					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
-					<h4>Цена: 10€</h4>
+					<p>Как известно, большинство вузов требуют одни и те же документы для поступления. Мы составим для вас полный пакет документов, на основании которого вы сможете претендовать на поступление в выбранные вузы. В данную услугу входит составление 2-3 рекомендательных писем, мотивационного письма и академического CV, перевод транскриптсов, а так же подготовка других требуемых документов.</p>
+					<h5>Стоимость: 10€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -184,8 +188,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Проверка пакета документов</h4>
-					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
-					<h4>Цена: 10€</h4>
+					<p>Мы проверим ваши документы и сделаем так, чтобы вы имели максимальные шансы на поступление. В данную услугу входит редактура 2-3 рекомендательных писем, одного мотивационного письма и академического CV, проверка перевода транскриптсов, а также проверка соответствия ваших документах требованиям университета.</p>
+					<h5>Стоимость: 10€</h5>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -196,8 +200,8 @@
 				</div>
 				<div class="col-md-8 about-wedo-right">
 					<h4>Полный цикл поступления</h4>
-					<p>Вы сможете узнать ответы на все интересующие вас вопросы, а также получить исчерпывающую информацию по процедуре поступления</p>
-					<h4>Цена: 10€</h4>
+					<p>Если вы любите, когда всю работу делают для вас, то вы попали по адресу. На основании общения с вами и заполненной анкеты мы подготовим все требуемые документы (рекомендательные письма от имени ваших профессоров, мотивационное письмо, академическое CV, переведённые транскриптсы и другие требуе, а также дадим вам пошаговые инструкции по получения оставшихся документов, которые мы не можем собрать физически (экзамен по языку и формальные документы из вашего университета). Мы возьмём на себя всю такую работу, как общение с иностранным университетом и онлайн подача документов.</p>
+					<h4>Стоимость: 10€</h4>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -215,7 +219,7 @@
 <!--footer star here-->
 <div class="footer">
 	<div class="foter-bottom">
-		<p class="footer-copyrts">Designed by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+		<p class="footer-copyrts">Inspired by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
 	</div>
 </div>
 <!--footer end here-->
