base is growing

--- a/grants.html
+++ b/grants.html
@@ -80,12 +80,34 @@
 			</div>
 			<div class="about-wedo">
 				<div class="col-md-4 about-top-img">
-					<img src="img/consult.jpg" alt="" class="img-responsive">
+					<img src="grants-img/sweden.jpg" alt="" class="img-responsive">
 				</div>
 				<div class="col-md-8 about-wedo-right">
-					<a href ="grants/visby-programme-2016.html"><h4>Visby Programme Scholarships for master’s level studies</h4></a>
+					<a href ="grants/visby-programme.html"><h4>Visby Programme Scholarships for master’s level studies</h4></a>
 					<p>Стипендия для обучения в Швеции по программам магистра для граждан России, Украины, Беларуси, Молдовы и Грузии. Стипендия с полным покрытием (покрывается вся стоимость обучения и остальные расходы). Предоставляется travel grant и страховка.</p>
 					<p>Период для подач заявок: 1-13 февраля.</p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="grants-img/holland.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<a href ="grants/orange-tulip.html"><h4>Orange Tulip Scholarship Programme</h4></a>
+					<p>Стипендия для обучения в Голландии для граждан России. Стипендия доступна как для магистров, так и для бакалавров. Университеты-участники определяют размер и количество стипендий, а также программы, на которые они распространяются, требования к кандидатам, дедлайны для подачи заявок. Список вузов-участников доступен на сайте.</p>
+					<p>Дедлайн для подач заявок: 1 Апреля (может отличаться для некоторых институтов).</p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="about-wedo">
+				<div class="col-md-4 about-top-img">
+					<img src="grants-img/university-van-amsterdam.jpg" alt="" class="img-responsive">
+				</div>
+				<div class="col-md-8 about-wedo-right">
+					<a href ="grants/uva-merit.html"><h4>Amsterdam Merit Scholarships</h4></a>
+					<p>Стипендия для обучения в Университете Амстердама предоставляется для граждан стран, не входящих в ЕС. Доступна для обучения по программ магистра. Размер гранта € 6,000 - € 21,000. Список программ, для которых выделяются стипендии, доступен на сайте.</p>
+					<p>Дедлайн для подач заявок: 1 Марта / 1 Апреля / 1 Июня (разный в зависимости от факультета).</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
