--- a/grants/orange-tulip.html
+++ b/grants/orange-tulip.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>Бесплатое образование в Европе</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery-1.11.0.min.js"></script>
+<script src="../js/jquery-1.11.0.min.js"></script>
 <!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
+<link href="../css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -48,11 +48,11 @@
 			   <div class="top-nav">
 			   		<span class="menu"> <img src="images/icon.png" alt=""/></span>
 					<ul class="res">
-						<li><a href="index.html"><span data-hover="Главная">Главная</span></a></li>
-						<li><a href="grants.html"><span data-hover="База грантов">База грантов</span></a></li>
-						<li><a href="prices.html"><span data-hover='Наши услуги'>Наши услуги</span></a></li>
-						<li><a class="active" href="references.html">Отзывы</a></li>
-						<li><a href="contact.html"><span data-hover="Оставить заявку">Оставить заявку</span></a></li>
+						<li><a href="../index.html"><span data-hover="Главная">Главная</span></a></li>
+						<li><a class="active" href="../grants.html"><span data-hover="База грантов">База грантов</span></a></li>
+						<li><a href="../prices.html"><span data-hover='Наши услуги'>Наши услуги</span></a></li>
+						<li><a href="../references.html">Отзывы</a></li>
+						<li><a href="../contact.html"><span data-hover="Оставить заявку">Оставить заявку</span></a></li>
 					<div class="clearfix"> </div>
 					</ul>
 
@@ -76,8 +76,9 @@
 	<div class="container">
 		<div class="about-main">
 			<div class="about-top">
-				<h3>Что говорят другие</h3>
-				<p>Здесь скоро появится плагин с комментариями из контакта</p>
+				<h3>Visby Programme Scholarships for master’s level studies</h3>
+				<p>Стипендия для обучения в Швеции по программам магистра для граждан России, Украины, Беларуси, Молдовы и Грузии. Стипендия с полным покрытием (покрывается вся стоимость обучения и остальные расходы). Предоставляется travel grant и страховка.</p>
+				<p>Период для подач заявок: 1-13 февраля.</p>
 			</div>
 		</div>
 	</div>
@@ -93,7 +94,7 @@
 <!--footer star here-->
 <div class="footer">
 	<div class="foter-bottom">
-		<p class="footer-copyrts">Designed by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+		<p class="footer-copyrts">Inspired by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
 	</div>
 </div>
 <!--footer end here-->
