--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
 		<div class="header-main">
 			 <div class="logo">
 			 	<h1><a href="index.html">StudyAbroad<span class="logo-clr">Dream</span></a></h1>
+				 <p>Помощь поступающим за границу</p>
 			 </div>
 			 <div class="head-right">
 			   <div class="top-nav">
 			   		<span class="menu"> <img src="images/icon.png" alt=""/></span>
 					<ul class="res">
 						<li><a class="active" href="index.html">Главная</a></li>
-						<li><a href="prices.html"><span data-hover='Наши услуги'>Наши услуги     </span></a></li>
+						<li><a href="grants.html"><span data-hover="База грантов">База грантов</span></a></li>
+						<li><a href="prices.html"><span data-hover='Наши услуги'>Наши услуги</span></a></li>
 						<li><a href="references.html"><span data-hover="Отзывы">Отзывы</span></a></li>
 						<li><a href="contact.html"><span data-hover="Оставить заявку">Оставить заявку</span></a></li>
 					<div class="clearfix"> </div>
@@ -70,6 +72,7 @@
 	<div class="container">
 		<div class="banner-main">
 			<h2>We make the dream come true</h2>
+			<p>Помощь поступающим за границу</p>
 		</div>
 	</div>
 </div>
@@ -78,11 +81,44 @@
 	<div class="container">
 		<div class="col-md-6 recent-left">
 			<h3>Ваша мечта ближе чем кажется</h3>
-			<p>Мечтаете учиться за границей, но думаете, что это это дорого и невозможно? Мы на собственном примере доказали, что поступить в ведущий европейский вуз и получить грант - это реально.</p>
+			<p>Мечтаете учиться за границей, но думаете, что это это дорого и невозможно? Мы на собственном примере доказали, что поступить в ведущий иностранный вуз и получить грант - это реально.</p>
 			<p>Мы хотим поделиться с вами нашими знаниями и опытом и помочь осуществить мечту.</p>
 		</div>
 		<div class="col-md-6 recent-right">
 			<img src="img/students3.jpg" alt="" class="img-responsive">
+		</div>
+	</div>
+	<div class="clearfix"> </div>
+</div>
+<div class="recent-posts">
+	<div class="container">
+		<div class="recent-bottom">
+			<div class="col-md-6 recent-left">
+				<img src="img/girl_study.jpg" alt="" class="img-responsive">
+			</div>
+			<div class="col-md-6 recent-right">
+				<h3>Кто мы</h3>
+				<p>StudyAbroadDream - группа людей, которые поступили в зарубежные университеты, получив грант на полное покрытие. Теперь у нас есть желание помочь другим людям осуществить свою метчу. У нас есть знания и конкретные методы, которые увеличат ваши шансы на поступление.</p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+	<div class="clearfix"> </div>
+</div>
+<div class="recent-posts">
+	<div class="container">
+		<div class="recent-bottom">
+			<div class="col-md-6 recent-left">
+				<h3>Образовательные программы</h3>
+				<p>На нашем сайте вы можете найти информацию о некоторых доступных стипендиях и образовательных программах. Большинство программ, публикуемых нами, требуют знания английского языка. По вашей индивидуальной заявке мы сможем подобрать вам те программы, которые подходят именно вам.</p>
+				<div class="journal-btn">
+					<a href="prices.html">Смотреть программы</a>
+				</div>
+			</div>
+			<div class="col-md-6 recent-right">
+				<img src="img/girl_study.jpg" alt="" class="img-responsive">
+			</div>
+			<div class="clearfix"> </div>
 		</div>
 	</div>
 	<div class="clearfix"> </div>
@@ -118,15 +154,30 @@
 	<div class="container">
 		<div class="recent-bottom">
 			<div class="col-md-6 recent-left">
+				<h3>А что если у меня не получится</h3>
+				<p>Мы знаем, что любая заявка оценивается субъективно приёмной комиссией конкретного ВУЗа. В случае неудачи вашей заявки по нашей вине мы готовы вернуть вам деньги, потраченные на наши услуги.</p>
+			</div>
+			<div class="col-md-6 recent-right">
+				<img src="img/girl_study.jpg" alt="" class="img-responsive">
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+	<div class="clearfix"> </div>
+</div>
+<div class="recent-posts">
+	<div class="container">
+		<div class="recent-bottom">
+			<div class="col-md-6 recent-left">
+				<img src="img/macbook.jpg" alt="" class="img-responsive">
+			</div>
+			<div class="col-md-6 recent-right">
 				<h3>О нас пишут</h3>
 				<p><a href="#">Статья в журнале NonStop</a></p>
-				<p>Наша группа vk.com</p>
+				<p><a href="#">Наша группа vk.com</a></p>
 				<div class="journal-btn">
 					<a href="references.html">Отзывы о нас</a>
 				</div>
-			</div>
-			<div class="col-md-6 recent-right">
-				<img src="img/macbook.jpg" alt="" class="img-responsive">
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -143,7 +194,7 @@
 <!--footer star here-->
 <div class="footer">
 	<div class="foter-bottom">
-		<p class="footer-copyrts">Designed by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+		<p class="footer-copyrts">Inspired by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
 	</div>
 </div>
 <!--footer end here-->
