--- a/grants.html
+++ b/grants.html
@@ -43,13 +43,14 @@
 		<div class="header-main">
 			 <div class="logo">
 			 	<h1><a href="index.html">StudyAbroad<span class="logo-clr">Dream</span></a></h1>
+			 	<p>Помощь поступающим за границу</p>
 			 </div>
 			 <div class="head-right">
 			   <div class="top-nav">
 			   		<span class="menu"> <img src="images/icon.png" alt=""/></span>
 					<ul class="res">
-						<li><a href="index.html">Главная</a></li>
-						<li><a class="active" href="grants.html"><span data-hover="База грантов">База грантов</span></a></li>
+						<li><a href="index.html"><span data-hover="Главная">Главная</span></a></li>
+						<li><a class="active" href="grants.html">База грантов</a></li>
 						<li><a href="prices.html"><span data-hover='Наши услуги'>Наши услуги</span></a></li>
 						<li><a href="references.html"><span data-hover="Отзывы">Отзывы</span></a></li>
 						<li><a href="contact.html"><span data-hover="Оставить заявку">Оставить заявку</span></a></li>
@@ -72,13 +73,18 @@
 		</div>
 	</div>
 </div>
+<!--header end here-->
+<!--banner start here-->
+<div class="banner-small">
+</div>
+<!--banner end here-->
 <div class="about">
 	<div class="container">
 		<div class="about-top">
 				<h3>Стипендии и гранты</h3>
 				<p>Мы собрали информацию о грантах для обучения на программах разного уровня, предоставляющих полное и частичное покрытие. Мы приложим максимум усилий, чтобы эта база пополняялась как можно чаще.</p>
 			</div>
-			<div class="about-wedo">
+			<div class="about-wedo about-grant">
 				<div class="col-md-4 about-top-img">
 					<img src="grants-img/sweden.jpg" alt="" class="img-responsive">
 				</div>
@@ -89,7 +95,7 @@
 				</div>
 				<div class="clearfix"> </div>
 			</div>
-			<div class="about-wedo">
+			<div class="about-wedo about-grant">
 				<div class="col-md-4 about-top-img">
 					<img src="grants-img/holland.jpg" alt="" class="img-responsive">
 				</div>
@@ -100,7 +106,7 @@
 				</div>
 				<div class="clearfix"> </div>
 			</div>
-			<div class="about-wedo">
+			<div class="about-wedo about-grant">
 				<div class="col-md-4 about-top-img">
 					<img src="grants-img/university-van-amsterdam.jpg" alt="" class="img-responsive">
 				</div>
