--- a/grants/visby-programme.html
+++ b/grants/visby-programme.html
@@ -72,10 +72,15 @@
 		</div>
 	</div>
 </div>
+<!--header end here-->
+<!--banner start here-->
+<div class="banner-small">
+</div>
+<!--banner end here-->
 <div class="about">
 	<div class="container">
 		<div class="about-main">
-			<div class="about-top">
+			<div class="about-top about-grant-detailed">
 				<h3>Visby Programme Scholarships for master’s level studies</h3>
 				<p>Стипендия для обучения в Швеции по программам магистра для граждан России, Украины, Беларуси, Молдовы и Грузии. Стипендия с полным покрытием (покрывается вся стоимость обучения и остальные расходы). Предоставляется travel grant и страховка.</p>
 				<p>Период для подач заявок: 1-13 февраля.</p>
