--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
 	<div class="container">
 		<div class="banner-main">
 			<h2>We make the dream come true</h2>
-			<p>Помощь поступающим за границу</p>
 		</div>
 	</div>
 </div>
@@ -85,7 +84,7 @@
 			<p>Мы хотим поделиться с вами нашими знаниями и опытом и помочь осуществить мечту.</p>
 		</div>
 		<div class="col-md-6 recent-right">
-			<img src="img/students3.jpg" alt="" class="img-responsive">
+			<img src="img/roma-coleseo.jpg" alt="" class="img-responsive">
 		</div>
 	</div>
 	<div class="clearfix"> </div>
@@ -94,7 +93,7 @@
 	<div class="container">
 		<div class="recent-bottom">
 			<div class="col-md-6 recent-left">
-				<img src="img/girl_study.jpg" alt="" class="img-responsive">
+				<img src="img/paris-tour.jpg" alt="" class="img-responsive">
 			</div>
 			<div class="col-md-6 recent-right">
 				<h3>Кто мы</h3>
@@ -116,7 +115,7 @@
 				</div>
 			</div>
 			<div class="col-md-6 recent-right">
-				<img src="img/girl_study.jpg" alt="" class="img-responsive">
+				<img src="img/bruges.jpg" alt="" class="img-responsive">
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -127,7 +126,7 @@
 	<div class="container">
 		<div class="recent-bottom">
 			<div class="col-md-6 recent-left">
-				<img src="img/girl_study.jpg" alt="" class="img-responsive">
+				<img src="img/venezia.jpg" alt="" class="img-responsive">
 			</div>
 			<div class="col-md-6 recent-right">
 				<h3>Что мы предлагаем</h3>
@@ -158,7 +157,7 @@
 				<p>Мы знаем, что любая заявка оценивается субъективно приёмной комиссией конкретного ВУЗа. В случае неудачи вашей заявки по нашей вине мы готовы вернуть вам деньги, потраченные на наши услуги.</p>
 			</div>
 			<div class="col-md-6 recent-right">
-				<img src="img/girl_study.jpg" alt="" class="img-responsive">
+				<img src="img/gre-mountains.jpg" alt="" class="img-responsive">
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -172,12 +171,8 @@
 				<img src="img/macbook.jpg" alt="" class="img-responsive">
 			</div>
 			<div class="col-md-6 recent-right">
-				<h3>О нас пишут</h3>
-				<p><a href="#">Статья в журнале NonStop</a></p>
-				<p><a href="#">Наша группа vk.com</a></p>
-				<div class="journal-btn">
-					<a href="references.html">Отзывы о нас</a>
-				</div>
+				<h3>Мы в соцсетях</h3>
+				<p><a href="http://vk.com/studyabroaddream">Наша группа vk.com</a></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
