--- a/prices.html
+++ b/prices.html
@@ -36,6 +36,7 @@
 		<div class="header-main">
 			 <div class="logo">
 			 	<h1><a href="index.html">StudyAbroad<span class="logo-clr">Dream</span></a></h1>
+			 	<p>Помощь поступающим за границу</p>
 			 </div>
 			 <div class="head-right">
 			   <div class="top-nav">
@@ -65,6 +66,11 @@
 		</div>
 	</div>
 </div>
+<!--header end here-->
+<!--banner start here-->
+<div class="banner-small">
+</div>
+<!--banner end here-->
 <div class="about">
 	<div class="container">
 		<div class="about-main">
