--- a/references.html
+++ b/references.html
@@ -43,6 +43,7 @@
 		<div class="header-main">
 			 <div class="logo">
 			 	<h1><a href="index.html">StudyAbroad<span class="logo-clr">Dream</span></a></h1>
+			 	<p>Помощь поступающим за границу</p>
 			 </div>
 			 <div class="head-right">
 			   <div class="top-nav">
@@ -72,12 +73,17 @@
 		</div>
 	</div>
 </div>
+<!--header end here-->
+<!--banner start here-->
+<div class="banner-small">
+</div>
+<!--banner end here-->
 <div class="about">
 	<div class="container">
 		<div class="about-main">
 			<div class="about-top">
 				<h3>Что говорят другие</h3>
-				<p>Здесь скоро появится плагин с комментариями из контакта</p>
+				<p>Вы можете узнать <a href="http://vk.com/studyabroaddream">в нашей группе на vk.com.</a></p>
 			</div>
 		</div>
 	</div>
