--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,13 @@
 			});
 		});
 	</script>
+	<script language="JavaScript" src="оы/gen_validatorv31.js" type="text/javascript"></script>
+	<script language="JavaScript">
+		var frmvalidator  = new Validator("contact-form");
+		frmvalidator.addValidation("name","req","Пожалуйста укажите как вас зовут");
+		frmvalidator.addValidation("email","req","Пожалуйста введите электронный адрес");
+		frmvalidator.addValidation("message","req","Пожалуйста укажите интересующую вас услугу");
+</script>
 </head>
 <body>
 <!-- //end-smoth-scrolling -->
@@ -36,6 +43,7 @@
 		<div class="header-main">
 			<div class="logo">
 				<h1><a href="index.html">StudyAbroad<span class="logo-clr">Dream</span></a></h1>
+				<p>Помощь поступающим за границу</p>
 			</div>
 			<div class="head-right">
 				<div class="top-nav">
@@ -66,25 +74,29 @@
 	</div>
 </div>
 <!--header end here-->
+<!--banner start here-->
+<div class="banner-small">
+</div>
+<!--banner end here-->
 <!--contact start here-->
 <div class="contact">
 	<div class="container">
 		<div class="contact-main">
 			<div class="contact-top">
 				<h3>Заявка</h3>
-				<p>Если вы хотите заказать одну из наших услуг или задать нам интересующие вас вопросы, оставьте заявку, и мы обязательно свяжемся с вами</p>
+				<p>Если вы хотите заказать одну из наших услуг или задать нам интересующие вас вопросы, оставьте заявку, и мы обязательно свяжемся с вами.</p>
 			</div>
-			<div class="contact-bottom">
+			<form method="post" name="contact-form" action="contact-form-handler.php" class="contact-bottom">
 				<div class="col-md-4 con-name">
-					<input type="text" value="Как вас зовут" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Как вас зовут';}">
+					<input type="text" name="name" value="Как вас зовут" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Как вас зовут';}">
 				</div>
 				<div class="col-md-4 con-name">
-				    <input type="text" value="Ваш телефон" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Ваш телефон';}">
+				    <input type="text" name="email" value="E-mail" class="no-mar" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='E-mail';}">
 				</div>
 				<div class="col-md-4 con-name">
-				    <input type="text" value="E-mail" class="no-mar" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='E-mail';}">
+				    <input type="text" name="social" value="Ссылка на соцсеть" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Ссылка на соцсеть';}">
 				</div>
-				<textarea onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Укажите интересующую вас услугу или вопрос';}">Укажите интересующую вас услугу или вопрос</textarea>
+				<textarea name="message" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='Укажите интересующую вас услугу или вопрос';}">Укажите интересующую вас услугу или вопрос</textarea>
 				<input type="submit" value="Отправить">
 			</div>
 		</div>
